--- a/boutique/medium/1/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/1/last-of-the-big-tuskers/index.html
@@ -155,7 +155,7 @@
       <div>
         <h5 class="color tag"><a class="overscore" onclick="toggle_meta();"><font class="en">Digital Paintings</font><font class="fr">Peintures numèriques</font></a></h5>
         <div class="clear" id="product-meta">
-          <p class="small">Art <font class="en">of</font><font class="fr">de</font> <i>Last of the Big Tuskers</i> (2018).</p>
+          <p class="small">Art <font class="en">of</font><font class="fr">de</font> <i>Last of the Big Tuskers</i> (<font class="fr">&nbsp;</font>2018<font class="fr">&nbsp;</font>).</p>
 
         </div>
         <h5 class="author">Art <font class="en">by</font><font class="fr">par</font> Dane Aleksander.</h5>
