--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class="clear diptych">
 
         <div>
-          <a class="project-vignette" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
-            <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
+          <a class="project-vignette" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers, documentary film, 2018.">
+            <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers poster art, 2018." />
             <div class="bg-one">
               <h3><font class="color-one">Last of the Big Tuskers (<font class="fr">&nbsp;</font>2018<font class="fr">&nbsp;</font>)</font></h3>
               <p><font class="en">A film by James Currie&mdash;a documentary about the challenges to save the last of the big tuskers in Tembe Elephant Park, South Africa.</font><font class="fr">Un film de James Currie &mdash; un documentaire sur les défis pour conserver les derniers des éléphants à grosse défense à Tembe, Afrique du Sud.</font></p>
