--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -89,9 +89,7 @@
 
       <div>
         <h3 class="linebreak">Designing with Color and Light</h3>
-        <p>A colorscript communicates the visual tone&mdash;the emotion, the mood, the lighting and timing (of day) and so on. This bit of art direction provides a narrative road-map mapped onto a single document so that every artist has a clear picture of the arc of each sequence. That single document underpins the consistent use of color across a motion picture. A lesson from a master of color and light &ndash; a DreamWorks Animation background artist on <i>Prince of Egypt</i> (1998), <i>The Road to El Dorado</i> (2000) and <i>Sinbad: Legend of the Seven Seas</i> (2003) &ndash; Nathan Fowkes:</p>
-
-        <!-- Provide tone, mood, color ideas costuming ideas, setting ideas, and a continuity of that - not just the mood of a scene but how it interrelated to the overall picture, and the characters and the emotions of the characters. -->
+        <p>A colorscript communicates the visual tone&mdash;the emotion, the mood, the lighting and the timing and so on. This bit of art direction provides a narrative road-map mapped onto a single document so that every artist has a clear picture of the arc of each sequence. That single document underpins the interrelated use of color, including character design and set design, across a motion picture. A lesson from a master of color and light &ndash; a DreamWorks Animation background artist on <i>Prince of Egypt</i> (1998), <i>The Road to El Dorado</i> (2000) and <i>Sinbad: Legend of the Seven Seas</i> (2003) &ndash; Nathan Fowkes:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>Color carries with it a tremendous emotional impact. [&hellip;] Different kinds of color harmonies elicit a variety of moods. [&hellip;] [An artist has] to learn to think of color, and to design color, in terms of contrast, and that's why the color wheel is a useful tool because the color wheel arranges colors in terms of how they contrast with each other. [&hellip;] If you don't design, you've missed an opportunity.<b class="color">&rdquo;</b></p>
