--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -215,7 +215,7 @@
         <div class="quote" id="footnotes-4">
           <p class="small"><sup>6</sup> Elephants: Interesting Facts. International Elephant Foundation. <a href="../../../url/-org/elephantconservation-facts/" title="IEF / Elephants: Interesting Facts" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <!-- Body and Mind, Steve Bloom -->
+          <!-- Steve Bloom, Body and Mind -->
 
           <p class="small"><sup>7</sup> Laursen, L. Bekoff, M. 1978. Loxodonta africana. <i>Mammalian Species</i> Vol.92: 1-8. <a href="../../../url/doi/10-2307-3503889/" title="Digital Object Identifier / Mammalian Species Vol.92: 1-8" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
