--- a/conservation/afrique/index.html
+++ b/conservation/afrique/index.html
@@ -71,7 +71,7 @@
           </div> -->
 
           <div>
-            <h5><font class="overscore">Conservation en Afrique du sud</font></h5>
+            <h5><font class="overscore">Conservation en Afrique australe</font></h5>
             <ul>
               <li><a href="../../url/-org/ehranamibia/" title="EHRA" target="_blank">Elephant-Human Relations Aid</a>, <i>Namibie</i></li>
               <li><a href="../../url/-org/elephantswithoutborders/" title="EWB" target="_blank">Elephants Without Borders</a>, <i>Botswana</i></li>
@@ -216,7 +216,7 @@
           </div>
 
           <div>
-            <h5><font class="overscore">Afrique du sud</font></h5>
+            <h5><font class="overscore">Afrique australe</font></h5>
             <ul>
               <li><a href="../../url/unesco/914/" title="UNESCO #914" target="_blank">iSimangaliso Wetland Park</a>, <i>Afrique du Sud</i></li>
               <li><a href="../../url/unesco/985/" title="UNESCO #985" target="_blank">Maloti-Drakensberg Park</a>, <i>Lesotho</i>, <i>Afrique du Sud</i></li>
@@ -252,7 +252,7 @@
               <li>West Coast National Park</li>
             </ul>
 
-            <p class="linebreak small">Plus de zones protégées en Afrique du sud.</p>
+            <p class="linebreak small">Plus de zones protégées en Afrique du Sud.</p>
             <ul class="small">
               <li><a href="../../url/-co-za/tembe/" title="Tembe Elephant Park" target="_blank">Tembe Elephant Park</a></li>
 
