--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a class="project-vignette" href="scene/one/" title="Animat Habitat scene one, scène un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one: White Elephant cover art, 2024." />
             <div class="bg-one">
-              <h3><font class="color-one">I&nbsp; White Elephant (&ndash;)</font></h3>
+              <h3><font class="color-one">I&nbsp; White Elephant (<font class="fr">&nbsp;</font>&ndash;<font class="fr">&nbsp;</font>)</font></h3>
               <p><font class="en">Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.</font><font class="fr">Voyageons avec un éléphant à travers une mer de sable &mdash; une bande dessinée, une application compagnon et une invitation à changer la façon dont nous regardons la nature.</font></p>
             </div>
 
@@ -146,7 +146,8 @@
         <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
 
           <div class="gutter-tobo">
-            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et prénom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Name&nbsp;&#92;&nbsp;Nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+
           </div>
 
           <div class="gutter-tobo clear-top">
